tests/snapshots/deserializer__map_empty.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Map()"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {},
}

