tests/snapshots/deserializer__map_object_key.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Map([[{ a: true }, 1]])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {
        HeapReference(
            *1,
        ): I32(
            1,
        ),
    },
    1: Object {
        OneByte("a"): Bool(
            true,
        ),
    },
}

