tests/snapshots/deserializer__map_object_value.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Map([[1, { b: true }]])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {
        I32(
            1,
        ): HeapReference(
            *1,
        ),
    },
    1: Object {
        OneByte("b"): Bool(
            true,
        ),
    },
}

