tests/snapshots/deserializer__map_one_element.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Map([[\"a\", 1]])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {
        String(
            OneByte("a"),
        ): I32(
            1,
        ),
    },
}

