tests/snapshots/deserializer__null.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnull"
---
=== VALUE ===
Null

=== HEAP ===
Heap {}

